Date format change And associated layout issues

--- a/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
+++ b/app/assets/stylesheets/components/ccs-global/_ccs-global.scss
@@ -896,7 +896,7 @@ table.ccs-at-govuk-table--3070 {
   tr th:nth-last-child(2),
   tr td:nth-last-child(2) {
     padding: 1ex 0;
-    min-width : 9em;
+    min-width : 5em;
     }
   thead tr {
     border-top     : 2px solid #CCCCCC;
